# primesTestTutorial

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
app/: CMakeLists.txt  OnTheFlyPrimeTable.cpp  OnTheFlyPrimeTable.h  PreCalculatedPrimeTable.cpp  PreCalculatedPrimeTable.h  PrimeCalculator.h
test/: CMakeLists.txt  ExampleTest.cpp  test_main.cpp
